Fixed grid layout on football page, flowed in rest of content

--- a/football.html
+++ b/football.html
@@ -178,29 +178,34 @@
 				<div class="block-pic" id="block-4"></div>
 			</li>
 			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Brees leads Saints past Bears 26-18. ''That was a big play. Big momentum gainer going into halftime.'' - Brees</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-5"></div>
 			</li>
 			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">Indianapolis rallies late to beat Seahawks 34-28</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-6"></div>
 			</li>
 			<li class="block square">
-				<div class="caption">Lorem Ipsum Dolor</div>
-				<div class="caption-decoration"></div>
-				<div class="block-pic" id="block-6"></div>
-			</li>
-			<li class="block portrait">
-				<div class="caption">Lorem Ipsum Dolor</div>
+				<div class="caption">49ers pound Schaub, Texans in lopsided 34-3 win</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-7"></div>
 			</li>
-			<li class="block landscape">
-				<div class="caption">Lorem Ipsum Dolor</div>
+			<li class="block portrait">
+				<div class="caption">Vikes agree to $3M deal with QB Freeman</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-8"></div>
+			</li>
+			<li class="block landscape">
+				<div class="caption">Bengals end Brady's streak, beat Patriots 13-6. Patriots quarterback Tom Brady (12) is sacked by Bengals defensive end.</div>
+				<div class="caption-decoration"></div>
+				<div class="block-pic" id="block-9"></div>
+			</li>
+			<li class="block square" id="block-last">
+				<div class="caption">Washington, Arizona defense beat Carolina 22-6</div>
+				<div class="caption-decoration"></div>
+				<div class="block-pic" id="block-10"></div>
 			</li>
 
 		</ul>
