--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		    			<li>Eagles' Vick leaves with left leg injury</li>
 		    			<li>Brees, Graham lead 5-0 Saints</li>
 		    			<li>Woods delivers US Presidents Cup win</li>
+		    			<li>Woods delivers US Presidents Cup win</li>
 	    			</ul>
     			</div>
     		<div id="menu-border"></div>
