Fixed issue that cause menu arrow to overflow

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
 			<div id="menu-border"></div>
-    			<div id="ticker">
+    			<a href="#"><div id="ticker">
     				<ul id="ticker-container">
 		    			<li>Lions WR Johnson inactive at Green Bay</li>
 		    			<li>Eagles' Vick leaves with left leg injury</li>
 		    			<li>Brees, Graham lead 5-0 Saints</li>
 		    			<li>Woods delivers US Presidents Cup win</li>
-		    			<li>Woods delivers US Presidents Cup win</li>
+		    			<li>Bills name QB Lewis to start</li>
 	    			</ul>
-    			</div>
+    			</div></a>
     		<div id="menu-border"></div>
     		<div id="menu-scores">
                 <div class="score-container">
