Implemented Tagging Feature on Sports Pages

--- a/football.html
+++ b/football.html
@@ -10,14 +10,15 @@
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
 			<div id="menu-border"></div>
-    			<div id="ticker">
+    			<a href="#"><div id="ticker">
     				<ul id="ticker-container">
 		    			<li>Lions WR Johnson inactive at Green Bay</li>
 		    			<li>Eagles' Vick leaves with left leg injury</li>
 		    			<li>Brees, Graham lead 5-0 Saints</li>
 		    			<li>Woods delivers US Presidents Cup win</li>
+		    			<li>Bills name QB Lewis to start</li>
 	    			</ul>
-    			</div>
+    			</div></a>
     		<div id="menu-border"></div>
     		<div id="menu-scores">
                 <div class="score-container">
@@ -161,51 +162,115 @@
 				<div class="caption">Indianapolis Colts continue to beat up NFC West powers</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-1"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-blue">Colts</div></a>
+					<a href="#"><div class="tag bg-darkgray">NFC</div></a>
+					<a href="#"><div class="tag bg-orange">34 - 28</div></a>
+					<a href="#"><div class="tag bg-darkblue">Seahawks</div></a>
+				</div>
 			</li>
 			<li class="block landscape">
 				<div class="caption">Tom Brady’s 52-game streak with a touchdown pass ends in 13-6 loss to Bengals</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-2"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-lightorange">Bengals</div></a>
+					<a href="#"><div class="tag bg-darkblue">Patriots</div></a>
+					<a href="#"><div class="tag bg-darkgray">AFC</div></a>
+					<a href="#"><div class="tag bg-orange">13 - 6</div></a>
+					<a href="#"><div class="tag bg-blue">Tom Brady</div></a>
+				</div>
 			</li>
 			<li class="block square">
 				<div class="caption">Packers James Jones’ gets rejected by rogue Lions fans</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-3"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-blue">Lions</div></a>
+					<a href="#"><div class="tag bg-green">Packers</div></a>
+					<a href="#"><div class="tag bg-darkgray">NFC</div></a>
+					<a href="#"><div class="tag bg-orange">9 - 22</div></a>
+				</div>
 			</li>
 			<li class="block portrait">
 				<div class="caption">Can Colin Kaepernick find fantasy success?</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-4"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-crimson">49ers</div></a>
+					<a href="#"><div class="tag bg-darkblue">Texans</div></a>
+					<a href="#"><div class="tag bg-darkgray">NFC</div></a>
+					<a href="#"><div class="tag bg-orange">34 - 3</div></a>
+					<a href="#"><div class="tag bg-darkgray first">Colin Kaepernick</div></a>
+				</div>
 			</li>
 			<li class="block landscape">
 				<div class="caption">Brees leads Saints past Bears 26-18. ''That was a big play. Big momentum gainer going into halftime.'' - Brees</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-5"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-yellow">Saints</div></a>
+					<a href="#"><div class="tag bg-lightorange">Bears</div></a>
+					<a href="#"><div class="tag bg-darkgray">NFC</div></a>
+					<a href="#"><div class="tag bg-orange">26 - 18</div></a>
+					<a href="#"><div class="tag bg-darkgray">Drew Brees</div></a>
+				</div>
 			</li>
 			<li class="block square">
-				<div class="caption">Indianapolis rallies late to beat Seahawks 34-28</div>
+				<div class="caption">Prater's FG lifts Broncos past Cowboys, 51-48</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-6"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-lightorange">Broncos</div></a>
+					<a href="#"><div class="tag bg-darkblue">Cowboys</div></a>
+					<a href="#"><div class="tag bg-darkgray">AFC</div></a>
+					<a href="#"><div class="tag bg-orange first">51 - 48</div></a>
+					<a href="#"><div class="tag bg-darkgray">Matt Prater</div></a>
+				</div>
 			</li>
 			<li class="block square">
 				<div class="caption">49ers pound Schaub, Texans in lopsided 34-3 win</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-7"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-crimson">49ers</div></a>
+					<a href="#"><div class="tag bg-blue">Texans</div></a>
+					<a href="#"><div class="tag bg-darkgray">AFC</div></a>
+					<a href="#"><div class="tag bg-orange">34 - 4</div></a>
+				</div>
 			</li>
 			<li class="block portrait">
 				<div class="caption">Vikes agree to $3M deal with QB Freeman</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-8"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-yellow">Vikings</div></a>
+					<a href="#"><div class="tag bg-darkgray">Josh Freeman</div></a>
+					<a href="#"><div class="tag bg-darkgray">Recruit</div></a>
+				</div>
 			</li>
 			<li class="block landscape">
 				<div class="caption">Bengals end Brady's streak, beat Patriots 13-6. Patriots quarterback Tom Brady (12) is sacked by Bengals defensive end.</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-9"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-lightorange">Bengals</div></a>
+					<a href="#"><div class="tag bg-blue">Patriots</div></a>
+					<a href="#"><div class="tag bg-darkgray">AFC</div></a>
+					<a href="#"><div class="tag bg-orange">13 - 6</div></a>
+					<a href="#"><div class="tag bg-darkgray">Tom Brady</div></a>
+				</div>
 			</li>
 			<li class="block square" id="block-last">
-				<div class="caption">Washington, Arizona defense beat Carolina 22-6</div>
+				<div class="caption">Arizona defense beat Carolina 22-6</div>
 				<div class="caption-decoration"></div>
 				<div class="block-pic" id="block-10"></div>
+				<div class="tag-container">
+					<a href="#"><div class="tag first bg-darkblue" style="margin-left: 5px">Panthers</div></a>
+					<a href="#"><div class="tag bg-crimson">Cardinals</div></a>
+					<a href="#"><div class="tag bg-darkgray">NFC</div></a>
+					<a href="#"><div class="tag bg-orange">22 - 6</div></a>
+				</div>
 			</li>
 
 		</ul>
