Implemented small menu bar, new sub menu, and make sidebar items clickable

--- a/football.html
+++ b/football.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    	<div id="menu-bar">
+    	<div id="menu-bar" style="height: 145px">
 			<div id="logo-container">
     			<a href="index.html"><div id="logo"></div></a>
 			</div>
@@ -42,32 +42,39 @@
 		    				<div class="dropdown-sport-logo" id="football"></div>
 		    				<div class="dropdown-sport-title">FOOTBALL</div>
 						</li></a>
-						<li id="dropdown-soccer">
+						<li id="dropdown-soccer" class="small first">
 		    				<div class="dropdown-sport-logo" id="soccer"></div>
-		    				<div class="dropdown-sport-title">SOCCER</div>
 						</li>
-						<li id="dropdown-basketball">
+						<li id="dropdown-basketball" class="small">
 		    				<div class="dropdown-sport-logo" id="basketball"></div>
-		    				<div class="dropdown-sport-title">BASKETBALL</div>
 						</li>
-						<li id="dropdown-baseball">
+						<li id="dropdown-baseball" class="small">
 		    				<div class="dropdown-sport-logo" id="baseball"></div>
-		    				<div class="dropdown-sport-title">BASEBALL</div>
 						</li>
-						<li id="dropdown-hockey">
+						<li id="dropdown-hockey" class="small">
 		    				<div class="dropdown-sport-logo" id="hockey"></div>
-		    				<div class="dropdown-sport-title">HOCKEY</div>
 						</li>
-						<li id="dropdown-golf">
+						<li id="dropdown-golf" class="small">
 		    				<div class="dropdown-sport-logo" id="golf"></div>
-		    				<div class="dropdown-sport-title">GOLF</div>
 						</li>
-						<li id="dropdown-swimming">
+						<li id="dropdown-swimming" class="small">
 		    				<div class="dropdown-sport-logo" id="swimming"></div>
-		    				<div class="dropdown-sport-title">SWIMMING</div>
-	    				</div>
-					</li>
+	    				</li>
+	    			</div>
 	    		</ul>
+    		</div>
+    		<div class="sport-submenu">
+    			<a href="#"><div class="subheader first">Scores</div></a>
+    			<a href="#"><div class="subheader">Schedule</div></a>
+    			<a href="#"><div class="subheader">Standings</div></a>
+    			<a href="#"><div class="subheader">Stats</div></a>
+    			<a href="#"><div class="subheader">Teams</div></a>
+    			<a href="#"><div class="subheader">Players</div></a>
+    			<a href="#"><div class="subheader">Injuries</div></a>
+    			<a href="#"><div class="subheader">Odds</div></a>
+    			<a href="#"><div class="subheader">MNF</div></a>
+    			<a href="#"><div class="subheader">Rumors</div></a>
+    			<a href="#"><div class="subheader">Tickets</div></a>
     		</div>
 		</div>
 
@@ -78,14 +85,14 @@
 				<h1>LIVE</h1>
 				<div class="game" id="game-1">
 					<div class="teams">	
-						<div class="team" id="team-1">
+						<a href="#"><div class="team" id="team-1">
 							<div class="team-logo" id="ravens-logo"></div>
 							<h2>RAVENS</h2>
-						</div>
-						<div class="team" id="team-2">
+						</div></a>
+						<a href="#"><div class="team" id="team-2">
 							<div class="team-logo" id="cardinals-logo"></div>
 							<h2>CARDINALS</h2>
-						</div>
+						</div></a>
 					</div>
 					<div class="scores">
 						<h3 class="text-purple">43</h3>
@@ -94,14 +101,14 @@
 				</div>
 				<div class="game" id="game-2">
 					<div class="teams">	
-						<div class="team" id="team-3">
+						<a href="#"><div class="team" id="team-3">
 							<div class="team-logo" id="vikings-logo"></div>
 							<h2>VIKINGS</h2>
-						</div>
-						<div class="team" id="team-4">
+						</div></a>
+						<a href="#"><div class="team" id="team-4">
 							<div class="team-logo" id="patriots-logo"></div>
 							<h2>PATRIOTS</h2>
-						</div>
+						</div></a>
 					</div>
 					<div class="scores">
 						<h3 class="text-yellow">7</h3>
