Implemented Ad into article

--- a/superbowl.html
+++ b/superbowl.html
@@ -82,7 +82,7 @@
                     <div class="article-subheader">Ravens: Journey to Victory</div>
                 </div>
                 <div class="header-more">
-                    <a href="football.html" class="genre"><span>Football</span><span class="football-icon"></span></a>
+                    <a href="football.html" class="genre"><span>Football</span><span class="football-icon" id="football"></span></a>
                     <div class="share-article">
                         <div class="social-icon" id="facebook">f</div>
                         <div class="social-icon" id="twitter">t</div>
@@ -109,11 +109,18 @@
                     <span>"</span>To me, that was one of the most amazing goal-line stands I've ever been a part of in my career<span>"</span>
                 </h3>
                 <h1>With these Ravens, it was the only way.</h1>
-                <h2>
-                    A rout wouldn’t have been right. It ended the only way it should have, with a rickety old linebacker in his last game, running on fumes, his stunned defense trying to stop a dreaming kid from playing Montana-to-Clark in the back of the Superdome end zone.
-                    </br></br>
-                    Fourth and the Lombardi trophy from the 5-yard line — all or nothing, just like this go-long-or-go-home ride the past six weeks. <span class="inline-quote">“I was sitting there thinking there’s no way, there’s no way we stop them here,”</span> Flacco said. <span class="inline-quote">“But we did. I don’t think there’s any better ending to a career than that — a goal-line stand by one of the greatest linebackers and one of the greatest players to ever play the game.”</span>
-                </h2>
+                <div id="body-1-2-container">
+                    <h2>
+                        A rout wouldn’t have been right. It ended the only way it should have, with a rickety old linebacker in his last game, running on fumes, his stunned defense trying to stop a dreaming kid from playing Montana-to-Clark in the back of the Superdome end zone.
+                        </br></br>
+                        Fourth and the Lombardi trophy from the 5-yard line — all or nothing, just like this go-long-or-go-home ride the past six weeks. <span class="inline-quote">“I was sitting there thinking there’s no way, there’s no way we stop them here,”</span> Flacco said. <span class="inline-quote">“But we did. I don’t think there’s any better ending to a career than that — a goal-line stand by one of the greatest linebackers and one of the greatest players to ever play the game.”</span>
+                    </h2>
+                    <a href="#"><div class="article-ad">
+                        <div class="ad-logo">
+                            <div class="ad-text">AD</div>
+                        </div>
+                    </div></a>
+                </div>
                 <div class="body-2-container">
                     <div class="article-photo left" id="photo-2"></div>
                     <div class="body-2-text">    
