sports sidebar hides in small window sizes, added menu button to overlay
menu button expands sidebar on top of elements, can then be rehidden

--- a/football.html
+++ b/football.html
@@ -79,6 +79,13 @@
 		</div>
 
 
+	<div class="sidebar-expander">
+		<div class="expander-icon">
+			<h1>_</h1>
+			<h1>_</h1>
+			<h1>_</h1>
+		</div>
+	</div>
 	<div id="sidebar">
 		<div id="sidebar-inner">
 			<div id="live">
