--- a/index.html
+++ b/index.html
@@ -206,7 +206,13 @@
 				</div>
 				<div id="story-list" class="hidden"></div>
 			</div>
+			<div id="footer">
+				<div class="footer-logo-container">
+					<div class="footer-logo"></div>
+				</div>
+			</div>
 		</div>
+
 		
 
 	<script src="js/jquery-2.0.3.min.js"></script>
