replaced search bar with story header

--- a/index.html
+++ b/index.html
@@ -92,17 +92,9 @@
 			</div>
 		</div>
 		<div id="story-stream">
-			<div id="search">
-				<div id="search-categories">
-					<div id="soccer" class="category-icon"></div>
-					<div id="basketball" class="category-icon"></div>
-					<a href="football.html" alt="football" id="football" class="category-icon"></a>
-					<div id="baseball" class="category-icon"></div>
-					<div id="hockey" class="category-icon"></div>
-					<div id="golf" class="category-icon"></div>
-					<div id="swimming" class="category-icon"></div>
-				</div>
-				<div id="format-switcher"></div>
+			<div id="stories-header">
+				<a href="#stories-header"><h1>TOP STORIES</h1></a>
+				<a href="#" class="big-headline">Source: Matthews expected to miss 1 month</a>
 			</div>
 			<div id="stories">
 				<div id="story-grid" class="inline-visible">
