--- a/superbowl.html
+++ b/superbowl.html
@@ -11,14 +11,15 @@
                 <a href="index.html"><div id="logo"></div></a>
             </div>
             <div id="menu-border"></div>
-                <div id="ticker">
+                <a href="#"><div id="ticker">
                     <ul id="ticker-container">
                         <li>Lions WR Johnson inactive at Green Bay</li>
                         <li>Eagles' Vick leaves with left leg injury</li>
                         <li>Brees, Graham lead 5-0 Saints</li>
                         <li>Woods delivers US Presidents Cup win</li>
+                        <li>Bills name QB Lewis to start</li>
                     </ul>
-                </div>
+                </div></a>
             <div id="menu-border"></div>
             <div id="menu-scores">
                 <div class="score-container">
@@ -35,37 +36,39 @@
             </div>
             <div class="menu-dropdown">
                 <ul class="logo-dropdown">
-                    <a href="football.html"><li id="dropdown-football">
-                        <div class="dropdown-sport-logo" id="football"></div>
-                        <div class="dropdown-sport-title">FOOTBALL</div>
-                    </li></a>
-                    <li id="dropdown-football">
-                        <div class="dropdown-sport-logo" id="soccer"></div>
-                        <div class="dropdown-sport-title">SOCCER</div>
-                    </li>
-                    <li id="dropdown-basketball">
-                        <div class="dropdown-sport-logo" id="basketball"></div>
-                        <div class="dropdown-sport-title">BASKETBALL</div>
-                    </li>
-                    <li id="dropdown-baseball">
-                        <div class="dropdown-sport-logo" id="baseball"></div>
-                        <div class="dropdown-sport-title">BASEBALL</div>
-                    </li>
-                    <li id="dropdown-hockey">
-                        <div class="dropdown-sport-logo" id="hockey"></div>
-                        <div class="dropdown-sport-title">HOCKEY</div>
-                    </li>
-                    <li id="dropdown-golf">
-                        <div class="dropdown-sport-logo" id="golf"></div>
-                        <div class="dropdown-sport-title">GOLF</div>
-                    </li>
-                    <li id="dropdown-swimming">
-                        <div class="dropdown-sport-logo" id="swimming"></div>
-                        <div class="dropdown-sport-title">SWIMMING</div>
+                    <div class="view-more-left"><</div>
+                    <div class="view-more-right">></div>
+                    <div id="dropdown-items">
+                        <a href="football.html"><li id="dropdown-football">
+                            <div class="dropdown-sport-logo" id="football"></div>
+                            <div class="dropdown-sport-title">FOOTBALL</div>
+                        </li></a>
+                        <li id="dropdown-soccer">
+                            <div class="dropdown-sport-logo" id="soccer"></div>
+                            <div class="dropdown-sport-title">SOCCER</div>
+                        </li>
+                        <li id="dropdown-basketball">
+                            <div class="dropdown-sport-logo" id="basketball"></div>
+                            <div class="dropdown-sport-title">BASKETBALL</div>
+                        </li>
+                        <li id="dropdown-baseball">
+                            <div class="dropdown-sport-logo" id="baseball"></div>
+                            <div class="dropdown-sport-title">BASEBALL</div>
+                        </li>
+                        <li id="dropdown-hockey">
+                            <div class="dropdown-sport-logo" id="hockey"></div>
+                            <div class="dropdown-sport-title">HOCKEY</div>
+                        </li>
+                        <li id="dropdown-golf">
+                            <div class="dropdown-sport-logo" id="golf"></div>
+                            <div class="dropdown-sport-title">GOLF</div>
+                        </li>
+                        <li id="dropdown-swimming">
+                            <div class="dropdown-sport-logo" id="swimming"></div>
+                            <div class="dropdown-sport-title">SWIMMING</div>
+                        </div>
                     </li>
                 </ul>
-                <div class="ticker-dropdown"></div>
-                <div class="scores-dropdown"></div>
             </div>
         </div>
         <div class="hero-img-container">
