Bug fixes, added team logos to superbowl page

--- a/football.html
+++ b/football.html
@@ -1,6 +1,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title id='Lampy'>Lampy</title>
+    <title id='Sportly'>Sportly - Football</title>
    	<link rel="stylesheet" type="text/css" href="css/sports.css">
 </head>
 <body>
