--- a/superbowl.html
+++ b/superbowl.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title id='Lampy'>Lampy</title>
+        <title id='Sportly'>Sportly - Superbowl</title>
        	<link rel="stylesheet" type="text/css" href="css/article.css">
     </head>
     <body>
@@ -146,17 +146,24 @@
                     The rout, a win by blowout, would not have felt as right. They needed the theater, someone to tell them they couldn’t right before they did. Said Reed, smiling big,
                 </h2>
                 <h3 class="quote">“After everything we’ve been through, it was the only way it could end.”</h3>
-                <div class="final-score">
-                    <div class="final-number-container">
-                        <div class="final-number" id="final-ravens">34</div>
+                <div class="article-finale">
+                    <div class="final-logo" id="ravens"></div>
+
+                    <div class="final-score">
+                        <div class="score-container">
+                            <div class="final-number-container">
+                                <div class="final-number" id="final-ravens">34</div>
+                            </div>
+                            <div class="separator-container">
+                                <div class="final-separator" id="separator-1"></div>
+                                <div class="final-separator" id="separator-2"></div>
+                            </div>
+                            <div class="final-number-container" id="container-2">
+                                <div class="final-number" id="final-49ers">31</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="separator-container">
-                        <div class="final-separator" id="separator-1"></div>
-                        <div class="final-separator" id="separator-2"></div>
-                    </div>
-                    <div class="final-number-container" id="container-2">
-                        <div class="final-number" id="final-49ers">31</div>
-                    </div>
+                    <div class="final-logo" id="fortyniners"></div>
                 </div>
             </div>
         </div>
