--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title id='Lampy'>Lampy</title>
+        <title id='Sportly'>Sportly</title>
        	<link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     <body>
@@ -255,11 +255,6 @@
 					
 				</div>
 				<div id="story-list" class="hidden"></div>
-			</div>
-			<div id="footer">
-				<div class="footer-logo-container">
-					<div class="footer-logo"></div>
-				</div>
 			</div>
 		</div>
 
