--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title id='Lampy'>Ray Lewis</title>
+        <title id='Sportly'>Sportly - Ray Lewis</title>
        	<link rel="stylesheet" type="text/css" href="css/player.css">
     </head>
     <body>
