--- a/scores.html
+++ b/scores.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title id='Lampy'>Lampy</title>
+        <title id='Sportly'>Sportly - Scores</title>
        	<link rel="stylesheet" type="text/css" href="css/scores.css">
     </head>
     <body>
