Bug Fixes, cleaned up code

--- a/scores.html
+++ b/scores.html
@@ -257,6 +257,29 @@
 						</div>
 					</div>
 				</div>
+				<div class="scorebox">
+					<div class="score-photo" id="photo-9"></div>
+					<div class="score-text">
+						<div class="score-header">
+							<div class="team team-1">
+								<div class="team-logo"></div>
+								<h2 class="team-name">JAX</h2>
+								<h1 class="score">34</h1>
+							</div>
+							<div class="team team-2">
+								<div class="team-logo"></div>
+								<h1 class="score">20</h1>
+								<h2 class="team-name">STL</h2>
+							</div>
+						</div>
+						<div class="game-title">Rams end slump, beat winless Jaguars 34-20</div>
+						<div class="game-summary">
+							The St. Louis Rams had 10 days to mull over a dispiriting blowout loss to the San Francisco 49ers, the third straight time they were so far behind there was no coming back.
+							</br>___</br></br>
+							Sam Bradford passed to Austin Pettis to the right for 31 yard gain (Greg Zuerlein made PAT).
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
