--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title id='Sportly'>Sportly</title>
        	<link rel="stylesheet" type="text/css" href="css/index.css">
+       	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
 
